--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -86,7 +86,7 @@
             <li style="list-style-type: none;">
                 <ul>
                     <li>Teachers can request one or several recordings with <a title="By clicking on this link you can view the locations (lecture halls) that are equipped for recordings. After completing the request you will receive a URL-link from the web lecture services (Dienst Webcollege) that contains all past and futures recordings." href="http://webcollegeplanner.uva.nl/" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">http://webcollegeplanner.uva.nl/.</a> For more questions about weblectures, please contact <a title="mailto:webcolleges@uva.nl" href="mailto:webcolleges@uva.nl">webcolleges@uva.nl</a> (T: 020 525 2800).</li>
-                    <li><span class="element_toggler" role="button" aria-controls="webcollege_table" aria-expanded="False"> <a title="Click to expand more information" href="" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">What functionalities can I request with the webcollegeplanner?</a></span>
+                    <li><span class="element_toggler" role="button" aria-controls="webcollege_table" aria-expanded="False"><a href="">What functionalities can I request with the webcollegeplanner?</a></span>
                         <div id="webcollege_table" style="display: none;">
                             <table style="width: auto; height: auto; color: #000000;">
                                 <tbody>
@@ -209,7 +209,7 @@
                             <li>The livestream will happen over Zoom. By using a BRIO, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
                         </ol>
                     </li>
-                    <li><p>This equipment can be booked (for seminar rooms) via the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
+                    <li><p>At least one week in advance, this equipment can be booked (for seminar rooms) via the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
                 </ul>
             </li>
         </ul>
@@ -218,7 +218,7 @@
             <li style="list-style-type: none;">
                 <ul>
                     <li><p><em>The OWL is a device that provides online students a 360-degree viewing experience of the classroom (via a 360-degree camera) and allows students to hear the lecturer as it also functions as in-classroom microphone. This device is particularly suitable for group discussions, more speakers are automatically visible at the same time (Split screen). <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-workgroup-rooms" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></p></li>
-                    <li><p><strong>At least one week in advance</strong>, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</p></li>
+                    <li><p>At least one week in advance, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</p></li>
                     <li><p>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
                     <li><p><strong>The OWL will be used in combination with Zoom</strong></p></li>
                     <li style="list-style-type: none;">
