--- a/A-Z/Homepage.html
+++ b/A-Z/Homepage.html
@@ -2164,6 +2164,58 @@
                                     <p style="text-align: center;">
                                         <span style="color: #3598db; font-size: 17pt;">
                                             <span style="color: #3598db;"> <strong>
+                                                    <span style="color: #000000;">Online & Hybrid tools</span>
+                                                </strong> </span>
+                                        </span>
+                                    </p>
+                                    <p>&nbsp;</p>
+                                </td>
+                                <td style="width: 4.404%;">
+                                    <p><strong>&nbsp;</strong></p>
+                                </td>
+                                <td style="width: 56.2347%;">
+                                    <div class="styleguide-section__grid-demo-element">
+                                        <img style="margin-right: 8px; margin-bottom: 7px; height: 23px;" src="https://canvas.uva.nl/courses/8175/files/5127882/preview" alt="2021:22.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5127882" data-api-returntype="File" />
+                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
+                                            <li>
+                                                <span style="color: #ffffff;"><strong>(Web)lectures</strong></span>
+                                            </li>
+                                        </ul>
+                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
+                                            <li>
+                                                <span style="color: #ffffff;"><strong>Livestreaming</strong></span>
+                                            </li>
+                                        </ul>
+                                        <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
+                                            <li>
+                                                <span style="color: #ffffff;"><strong>Interactive Tools</strong></span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <p>
+                                        <span style="color: #5a5a5a;">There are so many online tools and hybrid resources available today, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed on this page are not offered by ICTO, we're just trying to help!</span>
+                                    </p>
+                                </td>
+                                <td style="width: 4.47733%;">
+                                    <p><strong>&nbsp;</strong></p>
+                                </td>
+                                <td style="width: 22.3964%;">
+                                    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools"><i class="icon-arrow-right"></i>
+                                        <span>&nbsp;View more</span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #e9ebed; padding: 15px;">
+                    <table style="border-collapse: collapse; width: 100.812%;" border="0">
+                        <tbody>
+                            <tr>
+                                <td style="width: 19.3883%;">
+                                    <p style="text-align: center;">
+                                        <span style="color: #3598db; font-size: 17pt;">
+                                            <span style="color: #3598db;"> <strong>
                                                     <span style="color: #000000;">MyMedia</span>
                                                 </strong> </span>
                                         </span>
@@ -2323,7 +2375,7 @@
                                     <p style="text-align: center;">
                                         <span style="color: #3598db; font-size: 17pt;">
                                             <span style="color: #3598db;"> <strong>
-                                                    <span style="color: #000000;">Weblectures</span>
+                                                    <span style="color: #000000;">Weblectures database</span>
                                                 </strong> </span>
                                         </span>
                                     </p>
