--- a/A-Z/Survey-Tools.html
+++ b/A-Z/Survey-Tools.html
@@ -85,7 +85,7 @@
                         <p style="text-align: center;">
                             <span style="color: #3598db; font-size: 17pt;">
                                 <span style="color: #3598db;"> <strong>
-                                        <span style="color: #000000;">SendSteps</span>
+                                        <span style="color: #000000;">Wooclap</span>
                                     </strong> </span>
                             </span>
                         </p>
@@ -96,10 +96,10 @@
                     </td>
                     <td style="width: 56.2347%;">
                         <div class="styleguide-section__grid-demo-element">
-                            <img id="4497437" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4497437/preview" alt="sendsteps.png" width="27" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4497437" data-api-returntype="File" />
+                            <img id="4497437" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/5126635/preview" alt="wooclap-logo.png" width="27" data-api-returntype="File" />
                             <ul class="pill" style="background: #6EACD8; margin-top: 20px; margin-right: 8px;">
                                 <li>
-                                    <span style="color: #ffffff;"><strong>Sendsteps</strong></span>
+                                    <span style="color: #ffffff;"><strong>Wooclap</strong></span>
                                 </li>
                             </ul>
                             <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
@@ -109,14 +109,14 @@
                             </ul>
                         </div>
                         <p>
-                            <span style="color: #5a5a5a;">Interested in live polling? Looking for something silimar like Mentimeter? Use Sendsteps to get instant feedback from students. Improve student interaction with this easy to use tool. We guarantee that polls are very easy to set up with this tool and are great to use during class.</span>
+                            <span style="color: #5a5a5a;">Wooclap is an 'Audience Response Tool'. While teaching/presenting, you can use this tool to present questions or statements to your audience. Attendees can respond to these using their smartphone or laptop. The results can be displayed directly on the screen of the presenter.</span>
                         </p>
                     </td>
                     <td style="width: 4.47733%;">
                         <p><strong>&nbsp;</strong></p>
                     </td>
                     <td style="width: 22.3964%;">
-                        <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/sendsteps" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/sendsteps"><i class="icon-arrow-right"></i>
+                        <a class="btn Button" style="margin: 5px;" href="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" data-api-returntype="Page" data-api-endpoint="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html"><i class="icon-arrow-right"></i>
                             <span>&nbsp;View more</span>
                         </a>
                     </td>
@@ -143,7 +143,7 @@
                     </td>
                     <td style="width: 56.2347%;">
                         <div class="styleguide-section__grid-demo-element">
-                            <img src="https://canvas.uva.nl/courses/8175/files/4545983/preview" alt="zoom-icon-logo.png" width="29" height="29" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4545983" data-api-returntype="File" />&nbsp;
+                            <img style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4545983/preview" alt="zoom-icon-logo.png" width="29" height="29" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4545983" data-api-returntype="File" />&nbsp;
                             <ul class="pill" style="background: #6EACD8; margin-top: 20px; margin-right: 8px;">
                                 <li>
                                     <span style="color: #ffffff;"><strong>Zoom</strong></span>
