--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -143,7 +143,12 @@
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><p>Following new regulations, the maximum group size for lecture halls will be set to 75 people. Unfortunately, this brings new administrative challenges. So, how do you as a teacher decide who can attend the lectures? There are generally two approaches: Self-enrollment or Pre-assignment. View this link to see the different tools and options available for lecture registration: <a title="TLC Keep on Teaching" href="https://tlc.uva.nl/en/article/student-selection-for-limited-available-seats/?faculty=54" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">Student selection for limited available seat</a></p></li>
+                    <li><p>Following new regulations, the maximum group size for lecture halls will be set to 75 people. Unfortunately, this brings new administrative challenges. So, how do you as a teacher decide who can attend the lectures?
+                        <ol>
+                            <li><a href="https://canvas.uva.nl/courses/8175/pages/self-enrollment-within-canvas">Create a self-enrollment system within Canvas</a></li>
+                            <li><a href="https://tlc.uva.nl/en/article/student-selection-for-limited-available-seats/?faculty=54" target="_blank" rel="noopener">Use other tools or registration systems</a></li>
+                        </ol>
+                    </li>
                 </ul>
 
                 <!--
