--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -134,7 +134,14 @@
                             </table>
                         </div>
                     </li>
-                    <li>It is possible to request a <strong>livestream</strong> with the webcollegeplanner. <strong>However</strong>, the livestream function has a delay of about 30 seconds which makes it not ideal for communicating with students at home. Starting this academic year, there will be a BRIO attached in every lecture hall by default and this will allow you to achieve the same goal, only without delay. Go to the 'Livestream' section at the top of this page to read more about it.</li>
+                    <li><a title="By choosing this option, the recordings will only be accessible for students within the canvas course and there are no options for download available for students" href="https://canvas.uva.nl/courses/8175/pages/how-to-embed-a-weblecture-in-canvas" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">How to embed the weblecture recording in Canvas</a>
+                    </li>
+                    <li>Please note:</li>
+                            <ul>
+                                <li>If the recording and/or live stream was requested via the webcollegeplanner and <strong>there's a change of location or room, the request for the recording and/or live stream must be submitted again</strong> via the webcollegeplanner.</li>
+                                <li>It is possible to request a <strong>livestream</strong> with the webcollegeplanner. <strong>However</strong>, the livestream function has a delay of about 30 seconds which makes it not ideal for communicating with students at home. Starting this academic year, there will be a BRIO attached in every lecture hall by default and this will allow you to achieve the same goal, only without delay. Go to the 'Livestream' section at the top of this page to read more about it.</li>
+                                <li>Do not forget to <strong>wear the microphone provided by the webcollegedienst during the lecture</strong>, otherwise students online won't hear you and the weblecture recording will contain no audio.</li>
+                            </ul>
                     <!--<li>Given the circumstances, we've provided a database for teachers containing all weblectures that were recorded between 2018 and 2020. You can <a class="inline_disabled" href="https://canvas.uva.nl/courses/8175/pages/weblectures-social-sciences" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/weblectures-social-sciences" data-api-returntype="Page">view the lectures here</a>.</li>-->
                 </ul>
             </li>
@@ -196,12 +203,12 @@
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in the lecture halls and which can be reserved for use in a seminar room from the REC Facility Services (soon, the BRIO will be installed in seminar rooms too). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
-                    <li><p><strong>You do not need to reserve the BRIO for lecture halls</strong></p></li>
+                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls (some departments have furnished a few seminar rooms in a different way, but these are extreme exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
+                    <li><p><strong>You do not need to reserve the BRIO!</strong></p></li>
                     <li style="list-style-type: none;">
-                        You just need to know how to start/connect the device to your computer:
+                        You just need to know how to start/connect the device to a laptop or computer:
                         <ul>
-                            <li>Use the <a href="https://canvas.uva.nl/courses/8175/pages/brio-instructions" target="_blank" rel="noopener">instruction sheet</a> present in lecture halls</li>
+                            <li>Use the <a href="https://canvas.uva.nl/courses/8175/pages/brio-instructions" target="_blank" rel="noopener">instruction sheet</a> present in lecture halls and seminar rooms</li>
                             <li>Ask a student assistant for help</li>
                             <li>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a></li>
                         </ul>
@@ -214,7 +221,7 @@
                             <li>The livestream will happen over Zoom. By using a BRIO, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
                         </ol>
                     </li>
-                    <li><p>At least one week in advance, this equipment can be booked (for seminar rooms) via the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
+                    <li><p>If you have any questions, please contact the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
                 </ul>
             </li>
         </ul>
