--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -134,7 +134,8 @@
                             </table>
                         </div>
                     </li>
-                    <li><a title="By choosing this option, the recordings will only be accessible for students within the canvas course and there are no options for download available for students" href="https://canvas.uva.nl/courses/8175/pages/how-to-embed-a-weblecture-in-canvas" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">How to embed the weblecture recording in Canvas</a>
+                    <!-- <li><a title="By choosing this option, the recordings will only be accessible for students within the canvas course and there are no options for download available for students" href="https://canvas.uva.nl/courses/8175/pages/how-to-embed-a-weblecture-in-canvas" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">How to embed the weblecture recording in Canvas</a>-->
+                    <li><a href="https://canvas.uva.nl/courses/8175/pages/how-to-embed-a-weblecture-in-canvas" data-api-returntype="Page">How to embed the weblecture recording/livestream in Canvas</a>
                     </li>
                     <li>Please note:</li>
                             <ul>
@@ -157,14 +158,6 @@
                         </ol>
                     </li>
                 </ul>
-
-                <!--
-                <ol>
-                    <li><a title="# cooming soon (deadline Sept 1) " href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">First come, first served</a></li>
-                    <li><a title="# cooming soon (deadline Sept 1)" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">Students can choose between a certain number of lectures each time</a></li>
-                    <li><a title="# cooming soon (deadline Sept 1)" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-tooltip="{&quot;tooltipClass&quot;:&quot;popover popover-padded&quot;, &quot;position&quot;:&quot;right&quot;}" data-api-returntype="Page">Enable registration for a certain group (one group at a time)</a></li>
-                </ol>
-                -->
             </li>
         </ul>
         <p><strong>Communicating with students at home (during the lecture)</strong></p>
@@ -199,12 +192,12 @@
                 </ul>
             </li>
         </ul>
-        <p><strong>BRIO <span style="color: #EF5625; margin-left: 5px;"><em>livestreaming device</em><span></strong></p> <img src="https://canvas.uva.nl/courses/8175/files/5136864/preview" alt="briokopie.png" width="122" style="float: right; margin-right: 10px;"/>
+        <p><strong>BRIO <span style="color: #EF5625; margin-left: 5px;"><em>livestreaming device</em><span></strong></p> <img src="https://canvas.uva.nl/courses/8175/files/5136864/preview" alt="briokopie.png" width="122" style="float: right; margin-right: 10px; margin-left: 5px;"/>
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls (some departments have furnished a few seminar rooms in a different way, but these are extreme exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
-                    <li><p><strong>You do not need to reserve the BRIO!</strong></p></li>
+                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls (some departments have furnished a few seminar rooms in a different way, but these are rare exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
+                    <li><p><strong>You do not need to book or reserve the BRIO</strong></p></li>
                     <li style="list-style-type: none;">
                         You just need to know how to start/connect the device to a laptop or computer:
                         <ul>
@@ -230,7 +223,7 @@
             <li style="list-style-type: none;">
                 <ul>
                     <li><p><em>The OWL is a device that provides online students a 360-degree viewing experience of the classroom (via a 360-degree camera) and allows students to hear the lecturer as it also functions as in-classroom microphone. This device is particularly suitable for group discussions, more speakers are automatically visible at the same time (Split screen). <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-workgroup-rooms" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></p></li>
-                    <li><p>At least one week in advance, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</p></li>
+                    <li><p><strong>At least one week in advance</strong>, teachers can request to use the OWLS by emailing <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a> (020 525) 1403 and/or working with their teaching planner. The device will be brought to the classroom at the scheduled time.</p></li>
                     <li><p>Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></li>
                     <li><p><strong>The OWL will be used in combination with Zoom</strong></p></li>
                     <li style="list-style-type: none;">
