--- a/A-Z/embed-weblecture.html
+++ b/A-Z/embed-weblecture.html
@@ -2,16 +2,15 @@
 <div class="grid-row">
     <div class="col-xs-12 col-md-20">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades menu</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/overview-testvision-manuals"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Digital exams</strong></span></a> <img style="width: auto; float: center; height: 30px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/5127882/preview" alt="2021:22.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5127882" data-api-returntype="File" /></div>
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page"><i class="icon-arrow-left"></i> <span>&nbsp;Go back</span></a></div>
         </div>
     </div>
 </div>
 
-<blockquote style="padding-top: 10px; padding-bottom: 10px;"><em>
-        <span style="color: #34495e;">By embedding the weblecture in Canvas, only students who are enrolled to your Canvas course can watch the recording. Moreover, the weblecture recording cannot be downloaded if you follow the steps below. If you want to add extra restrictions and details (such as restricting a time limit and/or sharing the recording with a few students) then create an empty "Assignment" instead of a "Page". This will provide you with extra options.</span>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+        <span style="color: #34495e;">Instead of sharing a URL link, you can retrieve the recordings and/or livestream from the WebcollegeDienst in Canvas and embed them in a page. By doing this, students aren't able to share lectures with other students outside of the course. If you embed the video within an Assignment, you can add additional viewing restrictions. Follow the instructions below to see what option suits best for you.</span>
     </em></blockquote>
 
-<p style="text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page"><i class="icon-arrow-left"></i> <span>&nbsp;Go back</span> </a></p>
 <h3 style="text-align: center;">How to embed weblectures in Canvas</h3>
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px;">
     <table style="height: auto; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
@@ -28,7 +27,15 @@
                         <span style="font-size: 14pt;">&nbsp;</span>
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;">
-                    <span style="font-size: 14pt;">&nbsp;</span>
+                    <span style="font-size: 12pt;">
+                        <em>With an <span style="text-decoration: underline;">Assignment</span> you can add two additional restrictions:
+                            <ul>
+                                <li>Automatically set a specific time limit within which the lecture can be viewed</li>
+                                <li>Determine which students or sections ("werkgroepen") can view the lecture</li>
+                            </ul>
+                        </em>
+                    </span>
+                    <br>
                 </td>
             </tr>
             <tr style="height: 46px; padding-bottom: 8px;">
@@ -53,7 +60,8 @@
                         <span style="font-size: 14pt;">3.</span>
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: 38px;">
-                    <strong>Select <span style="text-decoration: underline;">Presentation</span></strong>.
+                    <strong>Choose your preferred option</strong>.
+                    <!--<strong>Select <span style="text-decoration: underline;">Presentation</span></strong>.-->
                 </td>
             </tr>
             <tr style="height: 40px; padding-bottom: 8px;">
@@ -62,8 +70,24 @@
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;">
                     <span style="font-size: 14pt;">
-                        <span style="font-size: 12pt;"><em>By selecting "Collection" you can add all the lectures at once, with "Presentation" you're only sharing one particular lecture</em></span>
-                        <p><img style="width: 60%;" src="https://canvas.uva.nl/courses/8175/files/5171755/preview" alt="Schermafbeelding 2021-09-08 om 15.16.53.png" /></p>
+                        <img style="width: 60%;" src="https://canvas.uva.nl/courses/8175/files/5171755/preview" alt="Schermafbeelding 2021-09-08 om 15.16.53.png" />
+                        <br>
+                        <br>
+                        <span style="font-size: 12pt;"><strong>Pesentation &nbsp;<i class="icon-arrow-right"></i>&nbsp; share one particular lecture</strong></span>
+                        <br>
+                        <span style="font-size: 12pt; color: #EF5625"><em>Students aren't able to share the weblecture with other students who aren't enrolled to the course.</em></span>
+                        <ul>
+                            <li><span style="font-size: 12pt;">You can only find and add <span style="text-decoration: underline;">recordings</span> after the lecture is done</span></li>
+                            <li><span style="font-size: 12pt;">The <span style="text-decoration: underline;">livestream link</span> will appear 6 days in advance</span></li>
+                        </ul>
+                        <br>
+                        <span style="font-size: 12pt;"><strong>Collection &nbsp;<i class="icon-arrow-right"></i>&nbsp; share all lectures at once</strong></span>
+                        <br>
+                        <span style="font-size: 12pt; color: #EF5625"><em>It's possible for students to share the weblecture with other students with a UvAnetID.</em></span>
+                        <ul>
+                            <li><span style="font-size: 12pt;">You can find and add the <span style="text-decoration: underline;">collection with recordings</span> in advance, after the lecture is done the recording will appear in the list.</span></li>
+                            <li><span style="font-size: 12pt;">The <span style="text-decoration: underline;">livestream collection</span> will appear 6 days in advance</span></li>
+                        </ul>
                         <br>
                     </span>
                 </td>
@@ -72,7 +96,7 @@
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
                         <span style="font-size: 14pt;">4.</span>
                     </strong></td>
-                <td style="width: 90%; height: 38px; border-style: hidden;"><strong>Search for the specific weblecture by its subject name or code</strong>.</td>
+                <td style="width: 90%; height: 38px; border-style: hidden;"><strong>Search for the specific weblecture or collection by its subject name or code</strong>.</td>
             </tr>
             <tr style="height: 40px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
