--- a/A-Z/course-checklist.html
+++ b/A-Z/course-checklist.html
@@ -94,13 +94,14 @@
 
 <p><strong><em>Teachers commonly use one of the two options below</em></strong></p>
 <br>
+<img src="https://canvas.uva.nl/courses/8175/files/5208170/preview" alt="Schermafbeelding 2021-09-15 om 16.45.04.png" width="424" style="float: right;"/>
 <strong>1. Upload the study guide to a course home page</strong>
 <p>First, create a new page. Add some text and upload the study guide onto the page.</p>
 <a href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-upload-a-PDF-to-a-page-in-a-course/ta-p/666">How do I upload a PDF to a page in a course?</a>
 <p>Second, set your new page as frontpage<p>
 <a href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-change-the-Course-Home-Page/ta-p/1035">How do I change the Course Home Page?</a>
 <p>&nbsp;</p>
-
+<img src="https://canvas.uva.nl/courses/8175/files/5208150/preview" alt="Schermafbeelding 2021-09-15 om 16.35.31.png" width="431" style="float: right;"/>
 <strong>2. Upload the study guide to Modules</strong>
 <p>Go to Modules in your course menu. Create a new module by clicking on the upper right button <span style="text-decoration: underline;">+ Module</span>.</p>
 <p>Now, add the study guide to this module. You can do this by clicking on the upper right button <span style="text-decoration: underline;">+</span> within the module and by adding the guide as a "file" from your local computer.</p>
@@ -137,12 +138,22 @@
 </div>
 <blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
 <p>Today, education largely takes place online. Ensuring a good online learning environment is therefore more important than ever. In the next steps of this instruction we will come to the technical "musts", but for now, we will discuss some helpful tips to keep your canvas course neat and organized. This is not only great for students, but also for yourself and your team!</p></em></blockquote>
-<p>&nbsp;</p>
-<p>Use the course menu Modules</p>
-<p>&nbsp;</p>
-<p>Minimize your course menu</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+
+<div class="grid-row">
+    <div class="col-xs-12 col-md-7">
+        <p><strong>Use the course menu <span style="text-decoration: underline;">Modules</span> as your leading course environment</strong></p>
+        <p>You can make use of so many options and features in Canvas. Be it a <em>Page</em> with some introductionary text, an <em>Assignment</em> where students can hand in their paper, or a <em>File</em> containing literature. For every option there's a different menu to store these items in. However, there's one exception! If you're using the course menu <em>Modules</em>, you can actually import and combine all these elements together to create a clear overview. Instead of students having to click through different kinds of course menus and items, you can now provide a structured and powerfull setup.</p>
+        <a href="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Modules">How to use Modules in your Canvas course</a>
+        <br><br><br><br>
+        <p><strong>Minimize your <span style="text-decoration: underline;">course menu</span></strong></p>
+        <p>For each course, there are at least 20 different kinds of menus to make use of. The chances are slim that you will use all of these menus. We strongly recommend that you hide any parts you are not using, otherwise your canvas course will make a chaotic impression.</p>
+        <a href="https://community.canvaslms.com/t5/Instructor-Guide/How-do-I-manage-Course-Navigation-links/ta-p/1020">How to (dis)able course menu items</a>
+    </div>
+    <div class="col-xs-12 col-md-5">
+        <p><img src="https://canvas.uva.nl/courses/8175/files/5208571/preview" alt="Schermafbeelding 2021-09-15 om 17.10.25-1.png" width="100%" style="float: right;" /></p>
+        <p><img src="https://canvas.uva.nl/courses/8175/files/5208548/preview" alt="Schermafbeelding 2021-09-15 om 17.02.43-1.png" width="75%" style="float: left;" /></p>
+    </div>
+</div>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -169,17 +180,41 @@
     <h4 style="text-align: center;"><strong>3. About Zoom & Livestreaming</strong></h4>
 </div>
 <blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
-<p>Today, education largely takes place online. Ensuring a good online learning environment is therefore more important than ever. In the next steps of this instruction we will come to the technical "musts", but for now, we will discuss some helpful tips to keep your canvas course neat and organized. This is not only great for students, but also for yourself and your team!</p></em></blockquote>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>With distance education, the use of video calling is greater than ever. At the UvA, we use Zoom to allow seminar groups and lectures to take place online. Moreover, you can use livestreaming devices such as the BRIO or OWL to film the lecture hall or seminar room (over Zoom). For more information about online tools and hybrid resources, visit <a href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools">this page</a></p>
+</em></blockquote>
 
+<p style="font-size: 12pt;"><strong>BRIO <span style="color: #EF5625; margin-left: 5px;"><em>livestreaming device</em><span></strong></p> <img src="https://canvas.uva.nl/courses/8175/files/5136864/preview" alt="briokopie.png" width="122" style="float: right; margin-right: 10px; margin-left: 5px;"/>
+
+<span style="font-size: 12pt;">The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls (some departments have furnished a few seminar rooms in a different way, but these are rare exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></span>
+
+<span style="font-size: 12pt;"><p><strong>You do not need to book or reserve the BRIO</strong></p></span>
+<li style="list-style-type: none; font-size: 12pt;">
+    You just need to know how to start/connect the device to a laptop or computer:
+    <ul>
+        <li style="font-size: 12pt;">Use the <a href="https://canvas.uva.nl/courses/8175/pages/brio-instructions" target="_blank" rel="noopener">instruction sheet</a> present in lecture halls and seminar rooms</li>
+        <li style="font-size: 12pt;">Ask a student assistant for help</li>
+        <li style="font-size: 12pt;">Start-up support is available on request or ad-hoc in case of AV issues via the Facility Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a></li>
+    </ul>
+</li>
+<img src="https://canvas.uva.nl/courses/8175/files/4378112/preview" alt="98e289839f8d24fd7884d683d0abae84.png" width="82" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378112" data-api-returntype="File" style="float: right; margin-right: 10px; margin-left: 5px;"/>
+<span style="font-size: 12pt;"><p><strong>The BRIO will be used in combination with Zoom</strong></p></span>
+<li style="list-style-type: none; font-size: 12pt;">
+    <ol>
+        <li style="font-size: 12pt;"><a href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="_blank" rel="noopener">Create a Zoom meeting in your Canvas course.</a> This can be <em>one</em> recurring Zoom meeting for all lectures or <em>separate</em> meetings.</li>
+        <li style="font-size: 12pt;">Tell students to head over to the Zoom menu in Canvas to access the live lecture.</li>
+        <li style="font-size: 12pt;">The livestream will happen over Zoom. By using a BRIO, the lecture/seminar hall is now better captured in terms of audio and video quality.</li>
+    </ol>
+</li>
+
+<br>
+<span style="font-size: 12pt;"><p>For questions about the <strong>BRIO</strong>, please contact the Facility Services Service Desk, (020 525) 1403 or <a title="mailto:webcolleges@uva.nl" href="mailto:servicedesk-fs@uva.nl">servicedesk-fs@uva.nl</a>.</p></span>
+<span style="font-size: 12pt;"><p>For questions about <strong>Zoom</strong>, please visit <a href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching">this page</a>.</p></span>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <p>
     <a id="check4"></a>
@@ -203,6 +238,9 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>4. Assessment & examination</strong></h4>
 </div>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+</em></blockquote>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -236,6 +274,35 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>5. Create the (final) grade setup</strong></h4>
 </div>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+<p>All assignments and grades in Canvas can be found under 'Gradebook'/'Grades'. As of this year, a new menu has been added to take these grades, use them to calculate a final grade and push them through to SiS.</p>
+</em></blockquote>
+<p>Though you can always create your (final) grades setup at a later moment, it may be convenient to set this up at the start of your course. This way, you will save yourself some time at the end of the course.</p>
+<p>The final grades setup essentially consists of three steps:</p>
+    <ol>
+        <li style="font-size: 12pt;"><strong>Add grades/quizzes (from Canvas)</strong><br>
+          <p>You can use all of the assignments and quizzes already present in your Canvas course to set up your grade calculation. Click <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#basic1">here</a> to find out how.</p><br>
+        </li>
+        <li style="font-size: 12pt;"><strong>Add rules and conditions to your grade calculation setup</strong><br>
+          <p>To make sure the grades will be calculated properly, it's required to <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#calculate">add some rules and/or conditions</a> to the items in your calculation setup. Depending on the way in which the final grade for a course is calculated, it may also be necessary to create a calculated item.</p><br>
+        </li>
+        <li style="font-size: 12pt;"><strong>Publish & submit</strong><br>
+          <p>The final step does not require any action until you are ready to either:
+            <ul>
+              <li>
+              <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#publish">Publish final grades to your students</a><br>
+              or
+              </li>
+              <li>
+                <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool#sis">Push  final grades through to SiS</a>.<br>
+              </li>
+            </ul>
+            <br>
+            For now, it's important to be aware of the fact that grades have to be published to your students and SiS at some point during your course (most likely near the end).
+          </p>
+        </li>
+    </ol>
+
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -269,6 +336,23 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>6. Final check with student view</strong></h4>
 </div>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+<p>Student view allows teachers to view a Canvas course as their students would. This is a useful tool to doublecheck if your course is set up properly (e.g. to check if the aspects of your course that you wish to be published, are actually visible to students).</p>
+</em></blockquote>
+<p>
+  Navigate to your course's homepage and click the <strong>'Student view'</strong> button at the top right.
+  <br>
+  <br>
+  Make sure to check if:<br>
+  <ul>
+    <li>The right content in your course menu on the left is visble to students.<br>
+      <i>Missing something? Exit 'Student view' and navigate to: 'Settings' > 'Navigation'. Make items visible by dragging them from the bottom to the top list.</i><br>
+      <br>
+    </li>
+    <li>The right modules are published, along with their corresponding content.
+    </li>
+  </ul>
+</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -302,6 +386,9 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>7. Publish your course</strong></h4>
 </div>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+</em></blockquote>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -332,6 +419,9 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>8. Send message(s) to students</strong></h4>
 </div>
+<blockquote style="padding-top: 10px; padding-bottom: 20px;"><em>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+</em></blockquote>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
